# front/pages/api/v1/w/[wId]/data_sources/index.ts
@@ -9,6 +9,36 @@ export type GetDataSourcesResponseBody = {
   data_sources: Array<DataSourceType>;
 };
 
+/**
+ * @swagger
+ * /api/v1/w/{wId}/data_sources:
+ *   get:
+ *     summary: Get data sources
+ *     description: Get data sources in the workspace identified by {wId}.
+ *     tags:
+ *       - Data sources
+ *     parameters:
+ *       - in: path
+ *         name: wId
+ *         required: true
+ *         description: ID of the workspace
+ *         schema:
+ *           type: string
+ *       - in: header
+ *         name: Authorization
+ *         required: true
+ *         description: Bearer token for authentication
+ *         schema:
+ *           type: string
+ *     responses:
+ *       200:
+ *         description: The data sources
+ *      404:
+ *       description: The workspace was not found
+ *      405:
+ *      description: Method not supported
+ */
+
 async function handler(
   req: NextApiRequest,
   res: NextApiResponse<WithAPIErrorReponse<GetDataSourcesResponseBody>>
